--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1>Aprendendo sobre a Apple</h1>
         </div>
         <div id="nav">
-            <a href="index.html" title="Acesse a página inicial">
+            <a class="active" href="index.html" title="Acesse a página inicial">
                 Início
             </a>
             <a href="historia.html" title="Aprenda sobre a origem">
