--- a/iphone.html
+++ b/iphone.html
@@ -27,7 +27,7 @@
             <a href="macos.html" title="Sobre macOS">
                 OS X
             </a>
-            <a href="iphone.html" title="Sobre iOS">
+            <a class="active" href="iphone.html" title="Sobre iOS">
                 iOS
             </a>
         </div>
