--- a/macos.html
+++ b/macos.html
@@ -24,7 +24,7 @@
             <a href="logos.html" title="Saiba sobre as logos">
                 Logos
             </a>
-            <a href="macos.html" title="Sobre macOS">
+            <a class="active" href="macos.html" title="Sobre macOS">
                 OS X
             </a>
             <a href="iphone.html" title="Sobre iOS">
