Mais uma atualização para o projeto

--- a/historia.html
+++ b/historia.html
@@ -12,7 +12,7 @@
 <body>
     <div id= "container">
         <div id="header">
-            <h1>Aprendendo sobre a Apple</h1>
+            <h1>Curiosidades sobre a Apple</h1>
         </div>
         <div id="nav">
             <a href="index.html" title="Acesse a página inicial">
@@ -37,7 +37,7 @@
                 1976: A Apple foi fundada por Steve Jobs, Steve Wozniak e Ronald Wayne em Cupertino, Califórnia. O primeiro produto da empresa foi o Apple I, um computador pessoal projetado e construído por Wozniak. Jobs e Wozniak inicialmente montaram e venderam as máquinas em uma garagem, com Wayne ajudando no início.
             </p>
             <p>Abaixo está uma imagem da casa onde foi fundada em Crist Drive Los Altos, Califórnia</p>
-            <img src="img/Apple_Garage.jpg" alt="Local fundado da Apple" style="width: 40%;" class="casa">
+            <div id="garagem"><img src="img/Apple_Garage.jpg" alt="Local fundado da Apple" style="width: 70%;" class="casa"></div>
            <p>
             1977: A Apple lançou o Apple II, um dos primeiros computadores pessoais de sucesso comercial. O Apple II foi um grande sucesso devido ao seu design acessível e à capacidade de suportar gráficos coloridos e uma ampla gama de aplicativos.
            </p>
