--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div id= "container">
         <div id="header">
-            <h1>Aprendendo sobre a Apple</h1>
+            <h1>Curiosidades sobre a Apple</h1>
         </div>
         <div id="nav">
             <a class="active" href="index.html" title="Acesse a página inicial">
@@ -46,7 +46,7 @@
             </p>    
         </div>
         <div id="footer">
-            Site desenvolvido por Renzo Orfila para a disciplina de Desenvolvimento WEB I
+           <h3>Site desenvolvido por Renzo Orfila para o componente de Desenvolvimento Web I</h3>
         </div>
     </div>
     
