--- a/iphone.html
+++ b/iphone.html
@@ -12,7 +12,7 @@
 <body>
     <div id= "container">
         <div id="header">
-            <h1>Aprendendo sobre a Apple</h1>
+            <h1>Curiosidades sobre a Apple</h1>
         </div>
         <div id="nav">
             <a href="index.html" title="Acesse a página inicial">
@@ -35,6 +35,7 @@
             <h3>Sobre o sistema iOS</h3>
             <p>iOS (antes chamado de iPhone OS) é um sistema operacional móvel da Apple Inc. desenvolvido originalmente para o iPhone, iPod Touch e o iPad até a introdução do iPadOS em 2019, um sistema derivado do iOS. A Apple não permite que o iOS seja executado em hardware de terceiros. As versões principais do iOS são lançadas anualmente.</p>
             <p>A interface do usuário do iOS é baseada no conceito de manipulação direta, utilizando gestos em multi-toque. A interação com o sistema operacional inclui gestos como apenas tocar na tela, deslizar o dedo, e o movimento de "pinça" utilizado para se ampliar ou reduzir a imagem. Acelerômetros internos são usados por alguns aplicativos para responder à agitação do aparelho (resultando comumente no comando desfazer) ou rotação do mesmo (resultando comumente na mudança do modo retrato para modo paisagem). O iOS consiste em quatro camadas de abstração: a camada Core OS, a camada Core Services, a camada mídia, e a camada Cocoa Touch.</p>
+            <div id="iphone"><img src="img/iphone1.jpeg" alt="Iphone" width="30%"></div>
             <p>O sistema operacional foi apresentado com o iPhone na Macworld Conference & Expo em 9 de janeiro de 2007, e lançado no mês de junho. Inicialmente, as aplicações de terceiros não eram permitidas. Steve Jobs argumentou que os desenvolvedores poderiam criar aplicativos na web que "se comportam como aplicações nativas no iPhone". Em 17 de outubro de 2007, a Apple anunciou que a SDK nativa estava em desenvolvimento e que eles esperassem para colocá-la nas "mãos dos desenvolvedores".</p>
             <p>Em 6 de março de 2008, a Apple lançou o primeiro beta, juntamente com um novo nome para o sistema operacional: o "iPhone OS". A rápida venda de dispositivos móveis da Apple acendeu interesse no SDK. A Apple também vendeu mais de um milhão de iPhones durante uma temporada de feriados de 2007. Em 27 de janeiro de 2010, a Apple anunciou o iPad, com uma tela bem maior do que o iPhone e iPod touch, e projetado para navegar na web, consumo de mídia, e da leitura de iBooks. O nome "iOS" foi usado pela Cisco Systems. Para evitar qualquer ação judicial em potencial, a Apple licenciou o "iOS" uma marca registrada da Cisco.</p>
-<img src="img/iphone1.jpeg" alt="Iphone">
+</div>
