atualizando repositório para próxima atividade

--- a/historia.html
+++ b/historia.html
@@ -65,3 +65,8 @@
            </p>
            <p>2016: A Apple lançou o iPhone 7, que marcou a remoção do conector de fone de ouvido tradicional, impulsionando o mercado de fones de ouvido sem fio.</p>
            <p>2020: A Apple lançou seus próprios chips M1 para computadores Mac, marcando uma transição significativa dos processadores Intel para a arquitetura própria da empresa.</p>
+        </div>
+           <div id="footer">
+            <h3>Site desenvolvido por Renzo Orfila para o componente de Desenvolvimento Web I</h3>
+         </div>
+        </div>   
