--- a/logos.html
+++ b/logos.html
@@ -44,5 +44,8 @@
             <div class="logo"><p>Logo de 1998</p>
                 <img src="img/pngwing.com.png" alt="Apple logo" style="width: 195px;"></div>
             <div class="logo"><p>Logo atual</p>
-                <img src="img/Apple_logo_black.svg" alt="Logo atual" style="width: 150px;">
-</div>
+                <img src="img/Apple_logo_black.svg" alt="Logo atual" style="width: 150px;"></div>
+        </div>
+
+    </div>
+    
