--- a/macos.html
+++ b/macos.html
@@ -39,4 +39,8 @@
             <p>Assim, o macOS, lançado inicialmente pela Apple Computer em 2001, é uma combinação do Darwin (um núcleo derivado do micronúcleo Mach) com uma renovada GUI chamada Aqua.</p>
             <p>O macOS recebeu três tipos de arquiteturas durante os seus lançamentos. Os lançamentos do Mac OS X de 1999 até 2005 foram lançados nos Macs baseados em processadores PowerPC. A Apple anunciou em 2006 que a partir daquele ano a empresa adotaria a arquitetura Intel, as versões posteriores do sistema foram lançadas para os Macs baseados em Intel com processadores de 32 bits e 64 bits. Em 2020, ocorreu uma nova transição de arquitetura, o macOS 11 Big Sur adotou a arquitetura Apple Silicon baseada em ARM de 64 bits, apesar disso, os Macs com processadores Intel de 64 bits ainda receberão suporte limitado pela empresa.</p>
             </div>
+            <div id="footer">
+                <h3>Site desenvolvido por Renzo Orfila para o componente de Desenvolvimento Web I</h3>
+             </div>
+    </div>        
          
