atualizando para entrega de atividade

--- a/historia.html
+++ b/historia.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="desceiption" content="Página usando linkagem">
     <meta name="keywords" content="apple, html, macOS">
-    <title>Aprendendo sobre a Apple</title>
+    <title>Curiosidades sobre a Apple</title>
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="shortcut icon" href= "img/logotipo-da-apple.png" type="image/png">
 </head>
@@ -32,12 +32,17 @@
             </a>
         </div>
         <div id="content">
+            <section>
+                <h2>Origem da Apple</h2>
+                <p>Nesta página, será explicado resumidamente o surgimento da empresa e seus fundadores.</p>
+            </section>
+            <article>
             <h3>Fundadores e Início (1976-1980)</h3>
             <p>
                 1976: A Apple foi fundada por Steve Jobs, Steve Wozniak e Ronald Wayne em Cupertino, Califórnia. O primeiro produto da empresa foi o Apple I, um computador pessoal projetado e construído por Wozniak. Jobs e Wozniak inicialmente montaram e venderam as máquinas em uma garagem, com Wayne ajudando no início.
             </p>
             <p>Abaixo está uma imagem da casa onde foi fundada em Crist Drive Los Altos, Califórnia</p>
-            <div id="garagem"><img src="img/Apple_Garage.jpg" alt="Local fundado da Apple" style="width: 70%;" class="casa"></div>
+            <div id="garagem"><img src="img/Apple_Garage.jpg" alt="Local fundado da Apple" style="width: 40%;" class="casa"></div>
            <p>
             1977: A Apple lançou o Apple II, um dos primeiros computadores pessoais de sucesso comercial. O Apple II foi um grande sucesso devido ao seu design acessível e à capacidade de suportar gráficos coloridos e uma ampla gama de aplicativos.
            </p>
@@ -65,6 +70,7 @@
            </p>
            <p>2016: A Apple lançou o iPhone 7, que marcou a remoção do conector de fone de ouvido tradicional, impulsionando o mercado de fones de ouvido sem fio.</p>
            <p>2020: A Apple lançou seus próprios chips M1 para computadores Mac, marcando uma transição significativa dos processadores Intel para a arquitetura própria da empresa.</p>
+           </article>
         </div>
            <div id="footer">
             <h3>Site desenvolvido por Renzo Orfila para o componente de Desenvolvimento Web I</h3>
