--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="desceiption" content="Página usando linkagem">
     <meta name="keywords" content="apple, html, macOS">
-    <title>Aprendendo sobre a Apple</title>
+    <title>Curiosidades sobre a Apple</title>
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="shortcut icon" href= "img/logotipo-da-apple.png" type="image/png">
 </head>
@@ -32,6 +32,12 @@
             </a>
         </div>
         <div id="content">
+            <section>
+                <h2>Início</h2>
+                <p>Aqui será mostrado o artigo geral sobre uma das maiores empresas do mercado tecnológico.</p>
+            </section>
+
+            <article>
             <h3>O que é a Apple?</h3>
             <p>Apple (anteriormente Apple Computer) é uma empresa multinacional norte-americana que tem o objetivo de projetar e comercializar produtos eletrônicos de consumo, software de computador e computadores pessoais. Os produtos de hardware mais conhecidos da empresa incluem a linha de computadores Macintosh, iPod, iPhone, iPad, Apple TV e o Apple Watch. Os softwares incluem o sistema operacional macOS, o navegador de mídia iTunes, suíte de software multimídia e criatividade iLife, suíte de software de produtividade iWork, Aperture, um pacote de fotografia profissional, Final Cut Studio, uma suíte de vídeo profissional, produtos de software, Logic Studio, um conjunto de ferramentas de produção musical, navegador Safari e o iOS, um sistema operacional móvel.
             </p>
@@ -43,7 +49,8 @@
             </p>
             <p>
                 Por motivos tão variados como a sua filosofia de design estético completo até suas campanhas de publicidade distintas, a Apple estabeleceu uma reputação única na indústria de eletrônicos de consumo. Isso inclui uma base de clientes que se dedica à empresa e sua marca, especialmente nos Estados Unidos. A revista Fortune classificou a Apple a empresa mais admirada nos Estados Unidos em 2008, e do mundo em 2008, 2009 e 2010. A empresa também tem recebido críticas por seu contratos de trabalho, cuidado ambiental e práticas de negócios, incluindo as origens primárias dos materiais de base. No dia 2 de agosto de 2018, a Apple atingiu 1 trilhão de dólares em valor de mercado, a primeira empresa americana a chegar a este valor.
-            </p>    
+            </p>
+            </article>   
         </div>
         <div id="footer">
             <h3>Site desenvolvido por Renzo Orfila para o componente de Desenvolvimento Web I</h3>
