--- a/logos.html
+++ b/logos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="desceiption" content="Página usando linkagem">
     <meta name="keywords" content="apple, html, macOS">
-    <title>Aprendendo sobre a Apple</title>
+    <title>Curiosidades sobre a Apple</title>
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="shortcut icon" href= "img/logotipo-da-apple.png" type="image/png">
 </head>
@@ -32,20 +32,35 @@
             </a>
         </div>
         <div id="content">
-            <h3>História dos logos</h3>
+            <section>
+                <h2>História dos logos</h2>
+                <p>Além de vermos sobre sua origem, também devemos entender sobre sua aparência por meio dos logos.</p>
+            </section>
+
+            <article>
+            <h3>Apple e sua aparência</h3>
             <p>De acordo com Steve Jobs, o nome da empresa foi inspirado por sua visita a uma fazenda de maçãs, enquanto ele estava em uma dieta frutarianista. Jobs pensava que o nome "Apple" era "divertido, animado e não intimidante".</p>
             <p>O primeiro logotipo da Apple, desenhado por Ron Wayne, retrata Sir Isaac Newton sentado sob uma macieira. Foi quase imediatamente substituído pelo "arco-íris Apple" de Rob Janoff, a agora conhecida silhueta cor de arco-íris de uma maçã com uma mordida. Janoff apresentou Jobs com vários temas monocromáticos diferentes para o logotipo "mordido" e Jobs imediatamente gostou dele. No entanto, Jobs insistiu que o logotipo deveria ser colorido para humanizar a empresa. O logotipo foi projetado com uma mordida para que não fosse confundido com uma cereja. As listras coloridas foram concebidas para tornar o logotipo mais acessível e para representar o fato de que o Apple II poderia gerar gráficos em cores. Este logo é muitas vezes erroneamente referido como uma homenagem a Alan Turing, com a marca de mordida uma referência ao seu método de suicídio. Tanto Janoff quanto a Apple negam qualquer homenagem a Turing no desenho do logotipo.</p>
             <p>Em 27 de agosto de 1999 (o ano seguinte à introdução do iMac G3), a Apple deixou de usar oficialmente o esquema do arco-íris e começou a usar logotipos monocromáticos quase idênticos em forma à encarnação anterior do arco-íris.</p>
             <p>Steve Jobs e Steve Wozniak eram fãs dos The Beatles, mas a Apple teve problemas de marca registrada e nome com a Apple Corps, uma empresa multimídia iniciada pelos Beatles em 1967. Isso resultou em uma série de ações judiciais e de tensão entre as duas empresas. Essas questões terminaram com a resolução de seu mais recente processo em 2007.</p>
-                <div class="logo"><p>Primeiro protótipo da Apple</p>
-                <img src="img/Apple_first_logo.png" alt="Primeiro protótipo" style="width: 150px;"></div>
-            <div class="logo"><p>Primeiro logo oficial de 1978</p>
-                <img src="img/Apple_Computer_Logo_rainbow.svg" alt="Primeiro logo oficial" style="width: 160px;"></div>
-            <div class="logo"><p>Logo de 1998</p>
-                <img src="img/pngwing.com.png" alt="Apple logo" style="width: 195px;"></div>
-            <div class="logo"><p>Logo atual</p>
-                <img src="img/Apple_logo_black.svg" alt="Logo atual" style="width: 150px;"></div>
-        </div>
 
+            <article>
+                <h3>Designs dos logos com o tempo</h3>
+            <div class="logo">
+                <p>Primeiro protótipo da Apple</p>
+                <img src="img/Apple_first_logo.png" alt="Primeiro protótipo" style="width: 150px;">
+                <p>Primeira logo oficial</p>
+                <img src="img/Apple_Computer_Logo_rainbow.svg" alt="Primeiro logo oficial" style="width: 160px;">
+                <p>Logo de 1998</p>
+                <img src="img/pngwing.com.png" alt="Apple logo" style="width: 195px;">
+                <p>Logo atual</p>
+                <img src="img/Apple_logo_black.svg" alt="Logo atual" style="width: 160px; height: 200px;">
+                </div>
+            </article>
+        </div>
+        <div id="footer">
+            <h3>Site desenvolvido por Renzo Orfila para o componente de Desenvolvimento Web I</h3>
+         </div>
     </div>
+   
     
