--- a/macos.html
+++ b/macos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="desceiption" content="Página usando linkagem">
     <meta name="keywords" content="apple, html, macOS">
-    <title>Aprendendo sobre a Apple</title>
+    <title>Curiosidades sobre a Apple</title>
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="shortcut icon" href= "img/logotipo-da-apple.png" type="image/png">
 </head>
@@ -32,12 +32,20 @@
             </a>
         </div>
         <div id="content">
-            <h3>Sobre o SO da Apple</h3>
+            <section>
+                <h2>Sobre o SO da Apple</h2>
+                <p>Sendo bem concorrida com a Microsoft, a Apple oferece um sistema operacional único para seus usuários. Vejamos o que é o macOS.</p>
+            </section>
+
+            <article>
+            <h3>macOS</h3>
             <p>O macOS (anteriormente Mac OS X e posteriormente OS X, na fase de desenvolvimento inicialmente chamado Rhapsody Project) é um sistema operativo proprietário desenvolvido e distribuído pela empresa Apple Inc. desde 2001 e destinado exclusivamente aos computadores Mac. Dentro do mercado de desktops, laptops e pelo uso da web, é o segundo sistema operacional desktop mais usado, depois do Microsoft Windows. A última versão do OS X possui certificação UNIX. Até a versão 10.8 (Mountain Lion) chamava-se de Mac OS X, e entre esta e a versão 10.11 (El Capitan) chamava-se OS X.</p>
             <p>O macOS é a segunda grande série de sistemas operacionais Macintosh. O primeiro é coloquialmente chamado de Mac OS Classic, introduzido em 1984, o último lançamento desse sistema foi o Mac OS 9 em 1999. A primeira versão para desktop, o Mac OS X 10.0, foi lançada em março de 2001, com sua primeira atualização, a 10.1, chegando ainda naquele ano. Depois disso, a Apple começou a nomear seus lançamentos com nome de felinos, que duraram até OS X 10.8 Mountain Lion. A partir do OS X 10.9 Mavericks, os lançamentos foram nomeados em homenagem a locais na Califórnia. A Apple encurtou o nome de "Mac OS X" para "OS X" em 2012 e depois alterou para "macOS" em 2016, adotando a nomenclatura que eles estavam usando para seus outros sistemas operacionais como, iOS, watchOS e tvOS. A versão mais recente é do macOS Sonoma, que foi lançado publicamente para todos os usuários em setembro de 2023.</p>
             <div id="imac"><img src="img/imac1.jpeg" alt="Modelos iMac"></div>
             <p>Assim, o macOS, lançado inicialmente pela Apple Computer em 2001, é uma combinação do Darwin (um núcleo derivado do micronúcleo Mach) com uma renovada GUI chamada Aqua.</p>
             <p>O macOS recebeu três tipos de arquiteturas durante os seus lançamentos. Os lançamentos do Mac OS X de 1999 até 2005 foram lançados nos Macs baseados em processadores PowerPC. A Apple anunciou em 2006 que a partir daquele ano a empresa adotaria a arquitetura Intel, as versões posteriores do sistema foram lançadas para os Macs baseados em Intel com processadores de 32 bits e 64 bits. Em 2020, ocorreu uma nova transição de arquitetura, o macOS 11 Big Sur adotou a arquitetura Apple Silicon baseada em ARM de 64 bits, apesar disso, os Macs com processadores Intel de 64 bits ainda receberão suporte limitado pela empresa.</p>
+            </article>
+            
             </div>
             <div id="footer">
                 <h3>Site desenvolvido por Renzo Orfila para o componente de Desenvolvimento Web I</h3>
