--- a/iphone.html
+++ b/iphone.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="desceiption" content="Página usando linkagem">
     <meta name="keywords" content="apple, html, macOS">
-    <title>Aprendendo sobre a Apple</title>
+    <title>Curiosidades sobre a Apple</title>
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="shortcut icon" href= "img/logotipo-da-apple.png" type="image/png">
 </head>
@@ -32,12 +32,105 @@
             </a>
         </div>
         <div id="content">
-            <h3>Sobre o sistema iOS</h3>
+            <section>
+                <h2>Sobre o sistema iOS</h2>
+                <p>Assim como o macOS, também não podemos deixar de lado este incrível sistema operacional móvel que compete com o Android e atinge todo o mundo.</p>
+            </section>
+            <article>
+            <h3>iOS</h3>
             <p>iOS (antes chamado de iPhone OS) é um sistema operacional móvel da Apple Inc. desenvolvido originalmente para o iPhone, iPod Touch e o iPad até a introdução do iPadOS em 2019, um sistema derivado do iOS. A Apple não permite que o iOS seja executado em hardware de terceiros. As versões principais do iOS são lançadas anualmente.</p>
             <p>A interface do usuário do iOS é baseada no conceito de manipulação direta, utilizando gestos em multi-toque. A interação com o sistema operacional inclui gestos como apenas tocar na tela, deslizar o dedo, e o movimento de "pinça" utilizado para se ampliar ou reduzir a imagem. Acelerômetros internos são usados por alguns aplicativos para responder à agitação do aparelho (resultando comumente no comando desfazer) ou rotação do mesmo (resultando comumente na mudança do modo retrato para modo paisagem). O iOS consiste em quatro camadas de abstração: a camada Core OS, a camada Core Services, a camada mídia, e a camada Cocoa Touch.</p>
-            <div id="iphone"><img src="img/iphone1.jpeg" alt="Iphone" width="30%"></div>
+            <div id="iphone"><img src="img/iphone1.jpeg" alt="Iphone" width="20%"></div>
             <p>O sistema operacional foi apresentado com o iPhone na Macworld Conference & Expo em 9 de janeiro de 2007, e lançado no mês de junho. Inicialmente, as aplicações de terceiros não eram permitidas. Steve Jobs argumentou que os desenvolvedores poderiam criar aplicativos na web que "se comportam como aplicações nativas no iPhone". Em 17 de outubro de 2007, a Apple anunciou que a SDK nativa estava em desenvolvimento e que eles esperassem para colocá-la nas "mãos dos desenvolvedores".</p>
             <p>Em 6 de março de 2008, a Apple lançou o primeiro beta, juntamente com um novo nome para o sistema operacional: o "iPhone OS". A rápida venda de dispositivos móveis da Apple acendeu interesse no SDK. A Apple também vendeu mais de um milhão de iPhones durante uma temporada de feriados de 2007. Em 27 de janeiro de 2010, a Apple anunciou o iPad, com uma tela bem maior do que o iPhone e iPod touch, e projetado para navegar na web, consumo de mídia, e da leitura de iBooks. O nome "iOS" foi usado pela Cisco Systems. Para evitar qualquer ação judicial em potencial, a Apple licenciou o "iOS" uma marca registrada da Cisco.</p>
+            <p>Veja em seguida, em ordem cronológica, cada versão do iOS e seu ano de lançamento:</p>
+            </article>
+
+            <article class="tabela">
+                <h3>Tabela de modelos</h3>
+                <table class="tabela1">
+                    <thead>
+                        <tr>
+                            <th>Versão</th>
+                            <th>Ano de lançamento</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>iPhone OS 1</td>
+                            <td>2008</td>
+                        </tr>
+                        <tr>
+                            <td>iPhone OS 2</td>
+                            <td>2008</td>
+                        </tr>
+                        <tr>
+                            <td>iPhone OS 3</td>
+                            <td>2009</td>
+                        </tr>
+                        <tr>
+                            <td>iOS 4</td>
+                            <td>2010</td>
+                        </tr>
+                        <tr>
+                            <td>iOS 5</td>
+                            <td>2011</td>
+                        </tr>
+                        <tr>
+                            <td>iOS 6</td>
+                            <td>2012</td>
+                        </tr>
+                        <tr>
+                            <td>iOS 7</td>
+                            <td>2013</td>
+                        </tr>
+                        <tr>
+                            <td>iOS 8</td>
+                            <td>2014</td>
+                        </tr>
+                        <tr>
+                            <td>iOS 9</td>
+                            <td>2015</td>
+                        </tr>
+                        <tr>
+                            <td>iOS 10</td>
+                            <td>2016</td>
+                        </tr>
+                        <tr>
+                            <td>iOS 11</td>
+                            <td>2017</td>
+                        </tr>
+                        <tr>
+                            <td>iOS 12</td>
+                            <td>2018</td>
+                        </tr>
+                        <tr>
+                            <td>iOS 13</td>
+                            <td>2019</td>
+                        </tr>
+                        <tr>
+                            <td>iOS 14</td>
+                            <td>2020</td>
+                        </tr>
+                        <tr>
+                            <td>iOS 15</td>
+                            <td>2021</td>
+                        </tr>
+                        <tr>
+                            <td>iOS 16</td>
+                            <td>2022</td>
+                        </tr>
+                        <tr>
+                            <td>iOS 17</td>
+                            <td>2023</td>
+                        </tr>
+                        <tr>
+                            <td>iOS 18</td>
+                            <td>2024</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </article>
         </div>
         <div id="footer">
             <h3>Site desenvolvido por Renzo Orfila para o componente de Desenvolvimento Web I</h3>
